[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "disaster_response_env"
version = "2.0.2"
description = "Hardened Disaster Response MDP Environment (OpenEnv v0.2.0)"
dependencies = [
    "openenv-core>=0.2.0",
    "pydantic>=2.0",
    "openai>=1.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pyyaml>=6.0",
    "gymnasium",
    "stable-baselines3",
    "shimmy",
    "tensorboard",
    "numpy"
]

[project.scripts]
openenv-server = "server.app:main"

[tool.setuptools]
packages = ["server"]
py-modules = ["env", "models", "tasks"]
